# FX-heatmap-strategy

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: backtest.ini  data_loader.ini  data_processor.ini  heatmap_builder.ini  processor.ini  thermal_vision.ini  universe.ini
data/processed/bid_ask/: ask.csv  bid.csv
data/processed/rates/: AUD.csv  CAD.csv  CHF.csv  CNY.csv  DKK.csv  EUR.csv  GBP.csv  HKD.csv  JPY.csv  NOK.csv  NZD.csv  SEK.csv  SGD.csv  USD.csv
documentation/: sequence.puml
src/data/: data_loader.py  data_processor.py  heatmap_builder.py
src/notebooks/: 01_explore_data.ipynb  02_model_construction.ipynb  03_class_exercice.ipynb  04_backtesting.ipynb  05_CurrenciesOptim.ipynb
src/strategy/: backtest.py  thermal_vision.py
src/utils/: dir_utils.py  plot_utils.py
